backend-services/networking/stimulus-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: user-api
spec:
  host: user-api
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: controller
spec:
  host: controller
  subsets:
  - name: v1
    labels:
      version: v1
