backend-services/networking/stimulus-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-api
spec:
  hosts:
  - '*'
  gateways:
  - stimulus-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: user-api
        port:
          number: 3000
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: controller
spec:
  hosts:
  - controller
  http:
  - route:
    - destination:
        host: controller
        port:
          number: 4000
        subset: v1
    retries:
      attempts: 0
